--- a/webapp/src/components/style/login.css
+++ b/webapp/src/components/style/login.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   min-width: 10em;
   justify-content: space-between;
-  transform: translate(-50%, -70%);
+  transform: translate(-50%, 50%);
   background: white;
   border-radius: 1.5vh;
   font-size: 3vh;
